--- a/src/css/login.scss
+++ b/src/css/login.scss
@@ -1,6 +1,9 @@
-.loginPage{
+.loginPage {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
   height: fit-content;
 }
 
@@ -24,19 +27,20 @@
   background-color: #fafafa;
 }
 
-.login__title{
+.login__title {
   font-family: 'Billabong', sans-serif;
   font-size: 55px;
 
 
 }
 
-.login__email{
+.login__email {
   width: 80%;
   margin: 30px auto 20px;
   height: 36px;
 }
-.login__email input{
+
+.login__email input {
   width: 100%;
   height: 100%;
   border: 1px solid #dbdbdb;
@@ -44,18 +48,18 @@
   padding-left: 5px;
 }
 
-.login__email input:focus{
+.login__email input:focus {
   outline: none;
 }
 
 
-.login__password{
+.login__password {
   width: 80%;
   margin: 30px auto 20px;
   height: 36px;
 }
 
-.login__password input{
+.login__password input {
   width: 100%;
   height: 100%;
   border: 1px solid #dbdbdb;
@@ -64,11 +68,11 @@
 }
 
 
-.login__password input:focus{
+.login__password input:focus {
   outline: none;
 }
 
-.login__btn{
+.login__btn {
   height: 30px;
   width: 80%;
   margin: 0 auto;
@@ -79,7 +83,7 @@
   border: 1px solid #0095f6;
   border-radius: 3px;
   color: white;
-  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
   font-weight: 500;
   font-size: 14px;
   height: 100%;
@@ -87,7 +91,7 @@
 }
 
 
-.accountRegister{
+.accountRegister {
   display: flex;
   width: 350px;
   margin: 30px auto 0;
@@ -98,18 +102,21 @@
   background-color: white;
 
 }
-.accountRegister__link{
+
+.accountRegister__link {
   color: #0095f6;
   margin-left: 5px;
   text-decoration: none;
 }
-.twoLineDiv{
+
+.twoLineDiv {
   display: flex;
   margin: 13px auto;
   width: 79%;
 }
-.lineFirst{
-  background-color: rgba(var(--b38,219,219,219),1);
+
+.lineFirst {
+  background-color: rgba(var(--b38, 219, 219, 219), 1);
   background-color: #dbdbdb;
   height: 1px;
   -webkit-box-flex: 1;
@@ -126,8 +133,9 @@
   margin-top: 11px;
 
 }
-.lineSecond{
-  background-color: rgba(var(--b38,219,219,219),1);
+
+.lineSecond {
+  background-color: rgba(var(--b38, 219, 219, 219), 1);
   background-color: #dbdbdb;
   height: 1px;
   -webkit-box-flex: 1;
@@ -143,35 +151,38 @@
   -webkit-box-align: stretch;
   margin-top: 11px;
 }
-.lineText{
+
+.lineText {
   color: #8e8e8e;
   font-size: 13px;
-  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
   margin: auto 20px;
   font-weight: 600;
 }
 
-.facebookIconAndText{
+.facebookIconAndText {
   display: flex;
   justify-content: center;
-  &-text{
+
+  &-text {
     color: #00376b;
     font-size: 14px;
-    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
     font-weight: 600;
     margin-left: 7px;
   }
 }
 
-.icon{
+.icon {
 
-img{
-  width: 20px;
+  img {
+    width: 20px;
+  }
 }
-}
-.passwordText{
+
+.passwordText {
   color: #00376b;
   font-size: 12px;
   line-height: 18px;
-  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
 }
